[gd_scene load_steps=3 format=3 uid="uid://brrpdob8tpwjq"]

[ext_resource type="Script" path="res://scripts/menus/pause_menu.gd" id="1_y63dn"]
[ext_resource type="Theme" uid="uid://cyt67yifc08fx" path="res://pusholo_theme.tres" id="2_njgps"]

[node name="Pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y63dn")
metadata/_edit_vertical_guides_ = [574.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.921569)

[node name="MarginContainer" type="MarginContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
auto_translate_mode = 2
clip_contents = true
custom_minimum_size = Vector2(200, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 20

[node name="PausedHeading" type="Label" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "|| ~~~~ PAUSED ~~~~ ||"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
focus_mode = 0
theme = ExtResource("2_njgps")
theme_override_font_sizes/font_size = 40
button_mask = 3
text = "Resume"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"

[node name="Music" type="HSlider" parent="MarginContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
tooltip_text = "Music"
theme = ExtResource("2_njgps")
min_value = -30.0
max_value = 0.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="SFXlabel" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX"

[node name="SFX" type="HSlider" parent="MarginContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("2_njgps")
min_value = -30.0
max_value = 0.0

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme = ExtResource("2_njgps")
theme_override_font_sizes/font_size = 40
button_mask = 3
text = "Quit to Main Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer2/Resume" to="." method="_on_resume_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/HBoxContainer3/Music" to="." method="_on_music_value_changed"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer2/HBoxContainer2/SFX" to="." method="_on_sfx_drag_ended"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer2/HBoxContainer2/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
